# BotKit

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/core/: config.py
app/database/: __init__.py  psql.py
app/database/models/: medicine.py  reminder.py  users.py
app/handlers/: __init__.py  admin.py  other_handlers.py  reminder.py  user_handlers.py
app/handlers/medicine/: __init__.py  delete.py  expired.py  kits.py  search.py  share_kit.py  update.py  upload_items.py
app/keyboard/: admin_kb.py  keyboard.py  medicine_kb.py  menu.py  reminder_kb.py
app/lexicon/: lexicon.py  lexicon_admin.py  lexicon_reminder.py
app/middleware/: db.py  metrics.py  redis.py  user.py
app/repositoryes/: MedicineItemRepository.py  MedicineKitRepository.py  MedicineRepository.py  ReminderRepository.py  user_repository.py
app/states/: admin.py  medicine.py  reminder.py
app/utils/: flags.py  metrics.py  scheduler.py  verified_medicines.py
migrations/versions/: 0440f768a49e_feat_add_field_for_verified_medicine.py  38eaf25aac72_refactor_is_verified_in_medical_to_.py  553f8afd8469_feat_add_medecine_models.py  a582e8996f05_refactor_models_medicine.py  de1851e6f2e5_initial_migration.py  e1f08879a722_feat_add_field_deleted_in_medkit.py  fa07e814deef_feat_add_reminders_table.py
monitoring/grafana/dashboards/: bot-kit.json  bot.yaml
monitoring/prometheus/: prometheus.yml
scripts/: run.sh
