[project]
name = "botkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "apscheduler>=3.10,<4",
    "aiogram==3.22.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "alembic==1.17.2",
    "annotated-types==0.7.0",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "environs==14.5.0",
    "frozenlist==1.8.0",
    "greenlet==3.3.0",
    "hiredis==3.3.0",
    "idna==3.11",
    "magic-filter==1.0.12",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "marshmallow==4.1.1",
    "multidict==6.7.0",
    "pip==25.0.1",
    "prometheus-client==0.23.1",
    "propcache==0.4.1",
    "pydantic==2.11.10",
    "pydantic-core==2.33.2",
    "python-dotenv==1.2.1",
    "rapidfuzz==3.14.3",
    "redis==5.2.1",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "yarl==1.22.0",
]
